<resources>
    <string name="app_name">Fitness</string>
    <string name="signup_title">Become a Member</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="_0">0</string>
    <string name="join">Join</string>
    <string name="log_in">Log In</string>
    <string name="logo">logo</string>
    <string name="age">Age</string>
    <string name="sign_up">Sign Up</string>
    <string name="already">Already a Member? Sign in.</string>
    <string name="gateway">Your Gateway to <br />Fitness</string>
    <string name="beMem">Not a Member? Join Us.</string>
    <string name="images">Images</string>
    <string name="search">Search</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>